--- a/NorthCarolinaPopDensity.html
+++ b/NorthCarolinaPopDensity.html
@@ -4,7 +4,7 @@
     <!-- Meta Tag -->
     <meta charset="utf-8">
     <!-- D3.js Source -->
-    <script type= "text/javascript" src="http://d3js.org/d3.v5.min.js"></script>       
+    <script type= "text/javascript" src="d3.min.js"></script>       
     <script src="https://d3js.org/topojson.v2.min.js"></script>
     <style>
         body{ margin:0;position:fixed;top:0;right:0;bottom:0;left:0; }
